--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
@@ -9,8 +9,10 @@
         <div >
             <i id="icons1" class="small material-icons" >mail</i>
             <i id="icons2" class="small material-icons"  (click)="Logout()">person</i>
-        
+            <ngx-avatar name="John Doe"></ngx-avatar>
     </div>
+    
+    
     </mat-toolbar-row>
 </mat-toolbar>
 
