--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
@@ -4,7 +4,7 @@
             <img class="logo" src ="../../../assets/logo.png">
         </div>
         <div>
-            <h1 id="header">PROJECT ALLOTMENT PORTAL</h1>
+            <h2 id="header">PROJECT ALLOTMENT PORTAL</h2>
         </div>
         <div >
             
@@ -12,7 +12,7 @@
             <i id="icons2" class="small material-icons"  (click)="Logout()">person</i>
             
     </div>
-    <ngx-avatar name="John Doe"></ngx-avatar>
+    <!--<ngx-avatar name="John Doe"></ngx-avatar>-->
     
     </mat-toolbar-row>
 </mat-toolbar>
