page render commit

--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="header">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center" >
         <div>
             <img class="logo" src ="../../../assets/logo.png">
         </div>
         <div>
-            <h2 id="header">PROJECT ALLOTMENT PORTAL</h2>
+            <h2 id="headr">PROJECT ALLOTMENT PORTAL</h2>
         </div>
   <!--  <div>
             
@@ -25,8 +25,7 @@
             <ngx-avatar src="../../../assets/sugitra.jpg" size="40"  [matMenuTriggerFor]="beforeMenu" ></ngx-avatar>
         </div>
         <mat-menu #beforeMenu="matMenu" xPosition="before" class="drop-btn">
-            <button mat-menu-item>Home</button>
-            <button mat-menu-item href='https://outlook.live.com/owa/'>My Account</button>
+            <button mat-menu-item href='https://www.google.com/intl/en-GB/gmail/about/#'>My Account</button>
             <button mat-menu-item (click)="Logout()">Log Out</button>
           </mat-menu>
     </div>
