--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/navbar/navbar.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
-<mat-toolbar class="bg">
-    <mat-toolbar-row>
+<mat-toolbar >
+    <mat-toolbar-row class="bg"> 
       <div *ngIf= "data === 'HR'; else other_department">
         <a class="active" mat-button  [routerLinkActive]="['class1']" [routerLink]="'/welcomepage'"> Home </a>
         <a class="active" mat-button  [routerLinkActive]="['class1']" [routerLink]="'/hrdashboard'"> Stream Allocation </a>
