--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.css
@@ -10,9 +10,10 @@
     position: relative;
     cursor: pointer;
 }
-#header
+#headr
 {
     font-size: 27px;
+    font-weight: 450;
     
 }
 #icons2
@@ -26,4 +27,5 @@
 {
     cursor: pointer;
 }
+
 
