--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/navbar/navbar.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/navbar/navbar.component.css
@@ -1,29 +1,26 @@
 .bg
 {
     background-color: rgba(160, 158, 158, 0.795);   
+    height: 7vh;
+    position: relative;
     
 }
 a
 {
     color: black;
-    text-decoration: none;
-    
+    text-decoration: none;  
     font-size: 16px;
     left: 1em;
 }
 .active{
     color: black;
     cursor: pointer;
-    
 }
 .active:hover{
-   
-    color:teal;
+    color: #3949ab;
 }
 .class1
 {
-    background-color: rgb(233, 233, 233);
-    color:teal;
-    
+    color: #3949ab;
 }
 
