--- a/ProjectAllotmentPortal/AngularHUB/src/app/stream/stream.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/stream/stream.component.html
@@ -1,9 +1,10 @@
 
 <mat-card class='dashboard-card'>
-<button mat-raised-button color="primary" class="btn1" [matMenuTriggerFor]="beforeMenu">View Chart</button>
+<button mat-raised-button color="primary" 
+ class="btn1" [matMenuTriggerFor]="beforeMenu">View Chart</button>
 <mat-menu #beforeMenu="matMenu" xPosition="before">
-  <button mat-menu-item (click)="chart('streamChart')" >STREAM</button>
-  <button mat-menu-item (click)="chart('statusChart')">STATUS</button>
+  <button mat-menu-item (click)="chart('streamChart')"  matTooltip="View Stream chart" matTooltipPosition ="right">STREAM</button>
+  <button mat-menu-item (click)="chart('statusChart')" matTooltip="View Status chart" matTooltipPosition ="right">STATUS</button>
 </mat-menu>
 <mat-form-field class="filters" appearance="outline">
   <mat-icon matSuffix>search</mat-icon>
