--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/footer/footer.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<body>
+<body class="footer">
 <mat-grid-list cols="5" rowHeight="5:1">
     <mat-grid-tile><div class="rights">All Rights Reserved</div></mat-grid-tile>
     <mat-grid-tile></mat-grid-tile> 
