--- a/ProjectAllotmentPortal/AngularHUB/src/app/app.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/app.component.html
@@ -6,4 +6,4 @@
     <router-outlet></router-outlet>
     
 </div>
-<!--<app-footer *ngIf="router.url != '/login'" fxLayout="column"></app-footer>-->
+<app-footer *ngIf="router.url != '/login'" fxLayout="column"></app-footer>
