--- a/ProjectAllotmentPortal/AngularHUB/src/app/displayproject/displayproject.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/displayproject/displayproject.component.css
@@ -1,11 +1,11 @@
 .dashboardCard
 {
   position: relative;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(100, 51, 74, 5); 
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(50, 51, 74, 5); 
   width: 90%;
   left: 5%;
-  top:3em;
-  height: 410px;
+  top:1em;
+  height: 425px;
   
 }
 table{
@@ -16,7 +16,7 @@ table{
 {
   position: relative;
   overflow: auto;
-  max-height: 350px;
+  max-height: 310px;
 }
 
 .filters
@@ -58,10 +58,13 @@ table{
 }
 .tablehead{
   font-size: 17px;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 0.75em;
+  padding-bottom: 0.75em;
   position: relative;
   color: black;
   background-color: #bdbdbd;
   text-align: center;
+}
+.mat-row:hover {
+  background-color:#eeeeee;
 }
