--- a/ProjectAllotmentPortal/AngularHUB/src/app/project/project.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/project/project.component.css
@@ -3,15 +3,14 @@
   position: relative;
   left : 4em;
   width: 90%;
-  top: 3em;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(100, 51, 74, 5); 
-  height: 450px;
+  top: 1em;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(50, 51, 74, 5);  
+  height: 420px;
 }
 .tablehead{
-  
   font-size: 17px;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 0.75em;
+  padding-bottom: 0.75em;
   color: black;
   text-align: center;
   background-color: #bdbdbd;
@@ -29,9 +28,9 @@
 .content
 {
   position: relative;
-  max-height: 450px;
+  max-height: 400px;
   overflow-y: auto;
 }
 .mat-row:hover {
-  background-color:#e3f2fd;
+  background-color:#eeeeee;
 }
