--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.html
@@ -25,7 +25,7 @@
             <ngx-avatar src="../../../assets/sugitra.jpg" size="40"  [matMenuTriggerFor]="beforeMenu" ></ngx-avatar>
         </div>
         <mat-menu #beforeMenu="matMenu" xPosition="before" class="drop-btn">
-            <button mat-menu-item href='https://www.google.com/intl/en-GB/gmail/about/#'>My Account</button>
+            <button mat-menu-item><a href='https://www.google.com/intl/en-GB/gmail/about/#'>My Account</a></button>
             <button mat-menu-item (click)="Logout()">Log Out</button>
           </mat-menu>
     </div>
