--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/navbar/navbar.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 .bg
 {
-    background-color: rgba(160, 158, 158, 0.795);   
+    background-color: #bdbdbd;   
     height: 7vh;
     position: relative;
     
